--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿<section id="detailsEventBlockList">
-	<div style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; text-align:center; padding-bottom:20px; background: rgb(228, 223, 205); border-left: 3px solid #D7D0B8; border-right: 2px solid #D7D0B8; border-bottom: 2px solid #D7D0B8; overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
+	<div style="text-align: center; padding-bottom: 20px; background: rgb(223, 215, 188); overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
 		<div class="event-block-container">
 		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
 			<div class="event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
