--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_EventInfo.cshtml
@@ -26,7 +26,7 @@
 		</div>
 		<div class="event-block-info-link">
 			<p>
-				<a data-bind="attr: { href: urlLink, title: name }, text: urlLink"></a>
+				<a data-bind="attr: { href: urlLink, title: name}, text: urlLink" target= "_blank"></a>
 			</p>
 
 		</div>
