--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsSettings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model KalendarzKarieryData.Models.ViewModels.RegisterViewModel
 
 <section id="settingsContainer">
-	<div class="dark-background-div">
+	<div class="title-header">
 		<span>/Ustawienia/</span>
 	</div>
 
