--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿<section id="detailsEventBlockList">
-	<div style="text-align: center; padding-bottom: 20px; background: rgb(223, 215, 188); overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
+	<div style="text-align: center; padding-bottom: 20px; background: rgb(226, 221, 202); overflow: hidden;" data-bind="foreach: detailsPageDayEvents()">
 		<div class="event-block-container">
 		<span style="display:none;" class="hidden-event-id" data-bind="text: id"></span>
 			<div class="event-block hover-cursor-pointer" data-bind="click: function () { $root.showEventDetailsOnEventBlockClick( $element ) }">
@@ -7,8 +7,8 @@
 					<span data-bind="text: kind.name"></span>
 				</div>
 				<div class="event-block-content">
-					<div><span data-bind="text: name, style: { fontSize: '1.6em', lineHeight: '1', paddingBottom: '4px' } "></span></div>
-					<div style="font-size: 1.4em;"><span>godzina: </span><span data-bind="text: startDate.formatZero(startDate.startHour)"></span><span>:</span><span data-bind="	text: startDate.formatZero(startDate.startMinute)"></span><span style="padding:0 4px;"> - </span>
+					<div><span data-bind="text: name, style: { fontSize: '2em', lineHeight: '1', paddingBottom: '4px' } "></span></div>
+					<div style="font-size: 1.4em; color: rgb(192, 187, 172);"><span>godzina: </span><span data-bind="text: startDate.formatZero(startDate.startHour)"></span><span>:</span><span data-bind="	text: startDate.formatZero(startDate.startMinute)"></span><span style="padding:0 4px;"> - </span>
 					<span data-bind="text: startDate.formatZero(startDate.endHour)"></span><span>:</span><span data-bind="	text: startDate.formatZero(startDate.endMinute)"></span></div>
 					<div data-bind="if: address.street">
 					<span>adres: </span><span data-bind="text: address.street"></span><span>, </span><span data-bind="	text: address.city"></span>
