--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -13,8 +13,7 @@
 
 				@Html.Partial("_Login", new KalendarzKarieryData.Models.AccountModels.LoginModel())
 				@Html.Partial("_Register", new KalendarzKarieryData.Models.ViewModels.RegisterViewModel())
-
-				 
+			 
    }
    else
    {
@@ -25,10 +24,14 @@
 						@Html.AntiForgeryToken()
 						<a style="color: rgb(255, 109, 109);" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>
 	 }
-				</div>
-
-				@Html.Partial("_LobbyLoggedInBar") 
+				</div> 
    }
+
+			<div style="font-size: 2em; color: rgb(252, 251, 250); text-align: center; padding-top: 80px;">
+				Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
+			</div>
+
+			@Html.Partial("_LobbyLoggedInBar")
 
 			<div class="title-header">/Tablica wydarzeń/</div>
 			<div id="lobbyEventsMenuContainer">	
@@ -38,7 +41,7 @@
 						<span>Wydarzenia</span>
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1] ? $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1] ? $root.publicEventTreeCountBasedOnEventKind[1].events.old() : 0"></div>*@
 					</div>
 				</div>
@@ -50,7 +53,7 @@
 
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2] ? $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2] ? $root.publicEventTreeCountBasedOnEventKind[2].events.old() : 0"></div>*@
 					</div>
 				</div>
@@ -61,7 +64,7 @@
 						<span>Zajęcia</span>
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3] ? $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3] ? $root.publicEventTreeCountBasedOnEventKind[3].events.old() : 0"></div>*@
 					</div>
 				</div>
@@ -73,7 +76,7 @@
 
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4] ? $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4] ? $root.publicEventTreeCountBasedOnEventKind[4].events.old() : 0"></div>*@
 					</div>
 				</div>
@@ -85,7 +88,7 @@
 
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5] ? $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5] ? $root.publicEventTreeCountBasedOnEventKind[5].events.old() : 0"></div>*@
 					</div>
 				</div>
@@ -97,7 +100,7 @@
 
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6] ? $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6] ? $root.publicEventTreeCountBasedOnEventKind[6].events.old() : 0">78</div>*@
 					</div>
 				</div>
@@ -109,17 +112,11 @@
 
 					</div>
 					<div class="menu-item-number-container">
-						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7] ? $root.publicEventTreeCountBasedOnEventKind[7].events.upcoming() : 0"></div>
+						<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() : '-'"></div>
 						@*<div class="menu-item-number-old" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7] ? $root.publicEventTreeCountBasedOnEventKind[7].events.old() : 0"></div>*@
 					</div>
 				</div>
 			</div>
-
-			<div style="font-size: 2em; color: rgb(194, 186, 169);text-align: center;padding-top:80px; padding-bottom:100px;">
-				Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
-			</div>
-
-		
 
 			@Html.Partial("_LobbyAllSelectedEventsList")
 
