--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -414,7 +414,7 @@ body header {
 #detailsPanel {
 	min-height: 500px;
 	padding-top: 20px;
-	border-top:2px solid rgb(250, 248, 240);
+	border-top: 2px solid rgb(250, 248, 240);
 }
 
 #loginLinkContainer {
@@ -427,9 +427,8 @@ body header {
 .lobby-loggedIn-bar {
 	overflow: hidden;
 	color: rgb(185, 185, 185);
-	padding-left: 20px;
 	padding-top: 20px;
-	margin-bottom:120px;
+	margin-bottom: 120px;
 	text-align: center;
 }
 
@@ -626,24 +625,36 @@ body header {
 	*/
 }
 
+.show-old-events-checkbox {
+	vertical-align: bottom;
+	border: 2px solid rgb(255, 250, 232);
+	height: 22px;
+	width: 22px;
+	text-align: center;
+	padding: 4px;
+	border-radius: 4px;
+	display: inline-block;
+}
+
 #detailsPageAllEventsListContainer {
 	margin-left: 1.8%;
 	margin-top: 50px;
 	margin-bottom: 40px;
+}
+
+#lobbyPageAllEventsListContainer {
+	margin: 20px auto;
+	margin-top: 50px;
+}
+
+.display-events-overview-container {
 	font-size: 1.2em;
 	background: rgb(223, 215, 188);
 	width: 88%;
 	border-radius: 6px;
 	border: 1px solid rgb(212, 202, 168);
 	display: none;
-	padding-bottom:40px;
-}
-
-#lobbyPageAllEventsListContainer {
-	margin: 20px auto;
-	margin-bottom: 80px;
-	font-size: 1.2em;
-	width: 700px;
+	padding-bottom: 40px;
 }
 
 #addNewEventContainer {
@@ -926,8 +937,8 @@ background:rgb(115, 233, 162);
 	display: block;
 	text-align: center;
 	/*background: rgb(228, 221, 197);*/
-	border-top:2px solid rgb(250, 248, 240);
-	border-bottom:2px solid rgb(250, 248, 240);
+	border-top: 2px solid rgb(250, 248, 240);
+	border-bottom: 2px solid rgb(250, 248, 240);
 	padding: 12px 0;
 }
 
@@ -1217,9 +1228,10 @@ wydarzenia-tab {
 		}
 
 	#calendarDayDetailsTable .table-details-body {
-		background: rgba(252, 252, 252, 0.9);
+		background: rgb(249, 248, 246);
 		padding-top: 4px;
 		padding-bottom: 4px;
+		padding-left: 1px;
 	}
 
 		#calendarDayDetailsTable .table-details-body .details-day-cell {
@@ -1584,7 +1596,6 @@ legend {
 	z-index: 1;
 	margin-left: 2%;
 	color: rgb(250, 250, 250);
-	background: #fcfcfc;
 	padding-top: 60px;
 	top: -45px;
 }
@@ -1599,7 +1610,6 @@ legend {
 .event-block-info-footer {
 	padding: 10px;
 	border-top: 1px solid rgb(250, 250, 250);
-	background: rgb(226, 221, 202);
 	overflow: hidden;
 	color: gray;
 }
@@ -1608,6 +1618,7 @@ legend {
 	display: inline-block;
 	width: 30%;
 	vertical-align: top;
+	margin: 4px;
 }
 
 .event-block-content {
@@ -1630,7 +1641,6 @@ legend {
 	padding: 10px;
 	text-align: left;
 	z-index: 2;
-	margin: 10px;
 	border: 2px solid #D7D0B8;
 }
 
