--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -20,9 +20,9 @@
 	</div>
 
 	<div class="events-menu-container">
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item wydarzenia-border-tab"></div>
-			<div class="menu-item"  data-eventkind="1" data-privacylvl="private">
+			<div class="menu-item"  data-eventkind="1">
 				<span>Wydarzenia</span>
 			</div>
 			<div class="menu-item-number-container">
@@ -31,9 +31,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item lekcje-border-tab"></div>
-			<div class="menu-item" data-eventkind="2" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="2">
 				<span>Lekcje</span>
 
 			</div>
@@ -43,9 +43,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item zajecia-border-tab"></div>
-			<div class="menu-item" data-eventkind="3" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="3">
 				<span>Zajęcia</span>
 			</div>
 			<div class="menu-item-number-container">
@@ -54,9 +54,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item szkolenia-border-tab"></div>
-			<div class="menu-item" data-eventkind="4" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="4">
 				<span>Szkolenia</span>
 
 			</div>
@@ -66,9 +66,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item kursy-border-tab"></div>
-			<div class="menu-item" data-eventkind="5" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="5">
 				<span>Kursy</span>
 
 			</div>
@@ -78,9 +78,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item spotkania-border-tab"></div>
-			<div class="menu-item" data-eventkind="6" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="6">
 				<span>Spotkania</span>
 
 			</div>
@@ -90,9 +90,9 @@
 			</div>
 		</div>
 
-		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element ) }">
+		<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.detailsPageSelectedEvents ) }">
 			<div class="border-item inne-border-tab"></div>
-			<div class="menu-item" data-eventkind="7" data-privacylvl="private">
+			<div class="menu-item" data-eventkind="7">
 				<span>Inne</span>
 
 			</div>
