--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyAllSelectedEventsList.cshtml
@@ -1,20 +1,51 @@
-﻿<div id="lobbyPageAllEventsListContainer" style="display: none;">
-	<div class="title-header">
-		/Wybrane wydarzenia/
-	</div>
-	<div data-bind="foreach: $root.lobbyPageSelectedEvents" style="position: relative; left: 1px;">
-		<div data-bind="if: startDate.javaScriptStartDate <= $root.todayDate.javaScriptStartDate">
-			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(209,209,209); color: white;" data-bind="	text: name"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(180,180,180);" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);" data-bind="text: startDate.displayFullDate()"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(209,209,209);" data-bind="text: startDate.displayFullTime()"></div>
-		</div>
+﻿<div id="lobbyPageAllEventsListContainer" class="display-events-overview-container">
 
-		<div data-bind="if: startDate.javaScriptStartDate > $root.todayDate.javaScriptStartDate">
-			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; background: rgb(173, 151, 151); color: white;" data-bind="text: name"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(130,130,130);" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(173, 151, 151);" data-bind="text: startDate.displayFullDate()"></div>
-			<div style="display: inline-block; color: white; padding: 5px; background: rgb(173, 151, 151);" data-bind="text: startDate.displayFullTime()"></div>
+	<div style="text-align:left; padding: 5px; padding-left: 20px; color: rgb(231, 224, 202); border-bottom: 1px solid rgb(242, 242, 242); font-size: 1.4em; background: rgb(186, 176, 146); border-top-left-radius: 6px; border-top-right-radius: 6px;">
+		Publiczne wydarzenia
+	</div>
+
+	<div style="padding: 20px;">
+		<div class="hover-cursor-pointer" style="color: rgb(147, 139, 114); width: 240px;" data-bind="click: function () { $root.toggleShowOldEventsOnCheckboxClick( $element, $root.lobbyPageSelectedEvents ) }">
+			<div class="show-old-events-checkbox"></div>
+			<span style="padding: 4px;">Pokaż stare wydarzenia</span>
 		</div>
 	</div>
+
+	<div style="text-align: center; font-weight: bold; color: rgb(118, 104, 75); margin: 0 auto; width: 90%;">
+		<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; text-align: left;">Tytuł:</div>
+		<div style="display: inline-block; padding: 5px; width: 110px; text-align: left;">Data:</div>
+		<div style="display: inline-block; padding: 5px; width: 110px; text-align: left;">Godzina:</div>
+		<div style="display: inline-block; padding: 5px; width: 100px; text-align: left;">Rodzaj:</div>
+	</div>
+
+	<div data-bind="foreach: $root.lobbyPageSelectedEvents.old" style="text-align: center;">
+		<!-- ko if: $index() == 0 -->
+		<div style="color: rgb(255, 250, 232); /*color: rgb(147, 139, 114); */ padding: 10px 0; font-size: 2em;">
+			stare
+		</div>
+		<!-- /ko -->
+
+		<div class="selected-event-info-div">
+			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; color: rgb(118, 104, 75); text-align: left;" data-bind="text: name"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullDate()"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullTime()"></div>
+			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+		</div>
+	</div>
+
+	<div data-bind="foreach: $root.lobbyPageSelectedEvents.upcoming" style="text-align: center;">
+		<!-- ko if: $index() == 0 -->
+		<div style="color: rgb(255, 250, 232); padding: 10px 0; font-size: 2em;">
+			nadchodzące
+		</div>
+		<!-- /ko -->
+
+		<div class="selected-event-info-div">
+			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; color: rgb(118, 104, 75); text-align: left;" data-bind="text: name"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullDate()"></div>
+			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullTime()"></div>
+			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+		</div>
+	</div>
+
 </div>
