--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -26,7 +26,7 @@
 				<span>Wydarzenia</span>
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[0].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[0].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[0].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[0].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[1] ? $root.myEventTreeCountBasedOnEventKind[1].events.old() : 0"></div>*@
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="		text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[1].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[1].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="		text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[1].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[1].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[2] ? $root.myEventTreeCountBasedOnEventKind[2].events.old() : 0"></div>*@
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<span>Zajęcia</span>
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[2].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[2].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[2].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[2].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[3] ? $root.myEventTreeCountBasedOnEventKind[3].events.old() : 0"></div>*@
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[3].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[3].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[3].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[3].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[4] ? $root.myEventTreeCountBasedOnEventKind[4].events.old() : 0"></div>*@
 			</div>
 		</div>
@@ -73,7 +73,7 @@
 
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="		text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[4].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[4].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="		text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[4].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[4].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[5] ? $root.myEventTreeCountBasedOnEventKind[5].events.old() : 0"></div>*@
 			</div>
 		</div>
@@ -85,7 +85,7 @@
 
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[5].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[5].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[5].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[5].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[6] ? $root.myEventTreeCountBasedOnEventKind[6].events.old() : 0">78</div>*@
 			</div>
 		</div>
@@ -97,7 +97,7 @@
 
 			</div>
 			<div class="menu-item-number-container">
-				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind != null && $root.myEventTreeCountBasedOnEventKind[6].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[6].events.upcoming() : '-'"></div>
+				<div class="menu-item-number-upcoming" data-bind="text: $root.myEventTreeCountBasedOnEventKind && $root.myEventTreeCountBasedOnEventKind[6].events.upcoming() != 0 ? $root.myEventTreeCountBasedOnEventKind[6].events.upcoming() : '-'"></div>
 				@*<div class="menu-item-number-old" data-bind="text: $root.myEventTreeCountBasedOnEventKind[7] ? $root.myEventTreeCountBasedOnEventKind[7].events.old() : 0"></div>*@
 			</div>
 		</div>
