--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -36,7 +36,7 @@
 			<div class="title-header">/Tablica wydarzeń/</div>
 
 			<div id="lobbyEventsMenuContainer">
-				<div style="height:100px;">
+				<div style="min-height:100px;">
 					<div class="menu-item-container" data-bind="click: function () { $root.showSelectedEventsOnMenuItemClick( $element, $root.lobbyPageSelectedEvents ) }">
 						<div class="border-item wydarzenia-border-tab"></div>
 						<div class="menu-item" data-eventkind="1">
