commented out box shadow on current month calendar

--- a/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/MediaQueries.css
@@ -22,4 +22,12 @@ MEDIA QUERIES
 	.year-name-container {
 		box-shadow: none;
 	}
+
+	.current-month-name-calendar {
+		box-shadow: none;
+	}
+
+	.today-day-header-calendar {
+		box-shadow: none;
+	}
 }
