--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -250,7 +250,6 @@ body header {
 }
 
 #loginPageContainer {
-	/*background: rgba(249, 255, 249, 1);*/
 	width: 440px;
 	top: 25px;
 	margin-left: 38%;
@@ -259,8 +258,6 @@ body header {
 	display: none;
 	position: absolute;
 	z-index: 101;
-	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
@@ -269,6 +266,14 @@ body header {
 		position: relative;
 		bottom: 14px;
 	}
+
+.event-kind-tag {
+	display: inline-block;
+	padding: 5px;
+	background: rgb(184, 168, 137);
+	width: 100px;
+	box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;
+}
 
 #registerPageContainer {
 	display: block;
@@ -279,8 +284,6 @@ body header {
 	display: none;
 	position: absolute;
 	z-index: 101;
-	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
@@ -446,7 +449,6 @@ body header {
 .current-month-cell {
 	border: 2px solid white;
 	background-color: rgb(253,253,253);
-	/*box-shadow: rgb(235, 235, 235) 0px 3px 5px;*/
 	color: black;
 	position: relative;
 }
@@ -805,8 +807,6 @@ background:rgb(115, 233, 162);
 	z-index: 100;
 	color: white;
 	border: 1px solid #adff2f;
-	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
@@ -1298,8 +1298,6 @@ wydarzenia-tab {
 
 
 .myButton-white {
-	-moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
 	box-shadow: inset 0px 1px 0px 0px #ffffff;
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
 	background: -moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
@@ -1309,8 +1307,6 @@ wydarzenia-tab {
 	background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
 	background-color: #ffffff;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
 	border-radius: 6px;
 	border: 1px solid #dcdcdc;
 	display: inline-block;
@@ -1372,10 +1368,6 @@ wydarzenia-tab {
 	overflow: hidden;
 	border: 1px solid #fff;
 	border-radius: 3px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-webkit-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
-	-moz-box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 	box-shadow: 1px 0px 40px 0px rgb(85, 85, 85);
 }
 
@@ -1403,8 +1395,6 @@ wydarzenia-tab {
 		-moz-border-radius: 5px;
 		-webkit-border-radius: 5px;
 		border-radius: 5px;
-		-moz-box-shadow: inset 0px 0px 1px #726959;
-		-webkit-box-shadow: inset 0px 0px 1px #b3a895;
 		box-shadow: inset 0px 0px 1px #b3a895;
 		outline: none;
 	}
