fixed publicEventCountTree bug

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -2,7 +2,7 @@
 
 <div id="detailsMenuHeader" class="title-header">
 	<span>
-		/Dziennik/
+		Dziennik
 	</span>
 </div>
 <section id="detailsPanel">
