--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -33,7 +33,7 @@
 
 			@Html.Partial( "_LobbyLoggedInBar" )
 
-			<div class="title-header">/Tablica wydarzeń/</div>
+			<div class="title-header">Tablica wydarzeń</div>
 
 			<div id="lobbyEventsMenuContainer">
 				<div style="min-height:100px;">
