--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="lobbyEventSummary">
-	<div class="title-header">/Nadchodzące wydarzenia/</div>
+	<div class="title-header">Nadchodzące wydarzenia</div>
 	<div style="overflow: hidden; border-top: 2px solid rgb(250, 248, 240);padding-top:40px;padding-bottom:40px;" data-bind="foreach: publicEvents">
 		<div class="event-block-container">
 			<span style="display: none;" class="hidden-event-id" data-bind="text: id"></span>
