--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsAllSelectedEventsList.cshtml
@@ -43,7 +43,7 @@
 			<div style="display: inline-block; width: 300px; margin-bottom: 2px; padding: 5px; vertical-align: top; color: rgb(118, 104, 75); text-align: left;" data-bind="text: name"></div>
 			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullDate()"></div>
 			<div style="display: inline-block; color: rgb(118, 104, 75); padding: 5px; width: 110px; text-align: left;" data-bind="text: startDate.displayFullTime()"></div>
-			<div style="display: inline-block; padding: 5px; background: rgb(184, 168, 137); width: 100px; box-shadow: rgb(143, 125, 107) 2px 2px 10px -1px inset;" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
+			<div class="event-kind-tag" data-bind="text: kind.name, style: { color: kind.headerColor }"></div>
 		</div>
 	</div>
 </div>
